--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -16,6 +16,6 @@ collections: # A list of collections the CMS should be able to edit
       - { label: 'Description', name: 'description', widget: 'markdown' }
       - { label: 'Notes', name: 'notes', widget: 'markdown' }
       - { label: 'Tags', name: 'tags', widget: 'list' }
-      - { label: 'Ingredients', name: 'ingredients', widget: 'list' }
+      - { label: 'Ingredients', name: 'ingredients', widget: 'list', field: { label: 'Ingredient', name: 'ingredients', widget: 'string' } }
       - { label: 'instructions', name: 'instructions', widget: 'list' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
