--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -13,8 +13,8 @@ collections: # A list of collections the CMS should be able to edit
     fields: # The fields each document in this collection have
       - { label: "Layout", name: "layout", widget: "hidden", default: "$/layouts/Layout.astro" }
       - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Description', name: 'description', widget: 'markdown' }
-      - { label: 'Notes', name: 'notes', widget: 'markdown' }
+      - { label: 'Description', name: 'description', widget: 'markdown', required: false, }
+      - { label: 'Notes', name: 'notes', widget: 'markdown', required: false, }
       - { label: 'Tags', name: 'tags', widget: 'list', field: { label: 'Tag', name: 'tag', widget: 'string' } }
       - { label: 'Ingredients', name: 'ingredients', widget: 'list', field: { label: 'Ingredient', name: 'ingredients', widget: 'string' } }
       - { label: 'instructions', name: 'instructions', widget: 'list', field: { label: 'Instruction', name: 'instruction', widget: 'string' } }
